Pre-incremental debug